# wavs-rewards

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  foundry.toml  metadata.json  package-lock.json  package.json  remappings.txt  rune2e.sh  wavs.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: e2e.yml
components/rewards/: Cargo.toml  Makefile
components/rewards/src/: bindings.rs  ipfs.rs  lib.rs  merkle.rs  trigger.rs
components/rewards/src/sources/: erc721.rs  mod.rs
frontend/: load-env.js  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/patches/: multiformats+9.9.0.patch  uint8arrays+3.1.1.patch
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/api/ipfs/[cid]/: route.ts
frontend/src/components/: ClaimHistory.tsx  ConnectButton.tsx  DebugPanel.tsx  DevWallet.tsx  MerkleTreeViewer.tsx  PendingRewards.tsx  RewardSources.tsx
frontend/src/contracts/: abis.ts
frontend/src/hooks/: useRewards.ts
frontend/src/types/: environment.d.ts  index.ts
frontend/src/utils/: environmentConfig.ts  ipfs.test.ts  ipfs.ts  wagmi-utils.ts  web3.ts
script/: Claim.s.sol  ClaimRewards.s.sol  Common.s.sol  Deploy.s.sol  ShowResult.s.sol  Trigger.s.sol  UpdateRewards.s.sol  avs-signing-key.sh  build_service.sh  deploy.sh  ipfs-upload.sh  start.sh  start_all.sh  upload-to-wasi-registry.sh
script/template/: .env.example.operator
src/contracts/: RewardDistributor.sol  RewardERC20.sol  RewardSourceERC721.sol  RewardSourceNft.sol  RewardToken.sol  RewardsDistributor.sol
src/interfaces/: ITypes.sol  IWavsSubmit.sol  IWavsTrigger.sol
test/unit/: RewardDistributor.t.sol  RewardsDistributor.t.sol
