[workspace]
members = ["components/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.4.0-beta.2"
license = "MIT"
authors = ["Lay3r Labs Team"]
repository = "https://github.com/Lay3rLabs/wavs"
rust-version = "1.80.0"

[workspace.dependencies]
# WASI
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags", "async"] }
wit-bindgen = "0.39.0"
wstd = "0.5.1"
wasi = "0.14.1"
wavs-wasi-utils = "=0.4.0-beta.2"

# Other
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
async-trait = "0.1.90"

## Alloy
alloy-sol-macro = { version = "1.1.0", features = ["json"] }
alloy-sol-types = "1.1.0"
alloy-network = "0.15.10"
alloy-provider = { version = "0.15.10", default-features = false, features = [
  "rpc-api",
] }
alloy-rpc-types = "0.15.10"

## IPFS
cid = "0.7"
multibase = "0.9"
multihash = "0.18"
bs58 = "0.5"       # For decoding v0 CIDs
