[package]
name = "rewards"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wit-bindgen-rt = { workspace = true }
wavs-wasi-chain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-sol-macro = { workspace = true }
wstd = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }

merkle-tree-rs = "0.1.0"
cid = "0.7"
multibase = "0.9"
multihash = "0.18"
bs58 = "0.5"             # For decoding v0 CIDs

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:rewards"
target = "wavs:worker/layer-trigger-world@0.3.0"
